--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   box-shadow: 0 2px 12px rgba(0,0,0,0.08);
   display: inline-block;
   margin-top: 16px;
+  margin-bottom: 32px;
   text-align: center;
 }
 /* General styles */
